name:                gore-and-ash-sync
version:             2.0.0.0
synopsis:            Gore&Ash module for high level network synchronization
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-sync
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

flag examples
  description: Enable building of examples
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.Sync
    Game.GoreAndAsh.Sync.API
    Game.GoreAndAsh.Sync.Module
    Game.GoreAndAsh.Sync.State

  default-language:    Haskell2010
  build-depends:
     base                     >= 4.7      && < 5
   , gore-and-ash             >= 2.0      && < 2.1
   , gore-and-ash-logging     >= 3.0      && < 3.1
   , gore-and-ash-network     >= 2.0      && < 2.1

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances
