name:                gore-and-ash-sync
version:             2.0.1.0
synopsis:            Gore&Ash module for high level network synchronization
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-sync
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml
bug-reports:   https://github.com/Teaspot-Studio/gore-and-ash-sync/issues

flag examples
  description: Enable building of examples
  default:     False

source-repository head
  type:        git
  location:    git@github.com:Teaspot-Studio/gore-and-ash-sync.git

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.Sync
    Game.GoreAndAsh.Sync.API
    Game.GoreAndAsh.Sync.Collection
    Game.GoreAndAsh.Sync.Collection.Message
    Game.GoreAndAsh.Sync.Message
    Game.GoreAndAsh.Sync.Module
    Game.GoreAndAsh.Sync.Options
    Game.GoreAndAsh.Sync.Predict
  default-language:    Haskell2010
  build-depends:
     base                     >= 4.7      && < 5
   , bytestring               >= 0.10     && < 0.11
   , containers               >= 0.5      && < 0.6
   , exceptions               >= 0.8      && < 0.9
   , gore-and-ash             >= 2.0      && < 2.1
   , gore-and-ash-logging     >= 3.0      && < 3.1
   , gore-and-ash-network     >= 2.0      && < 2.1
   , lens                     >= 4.14     && < 4.17
   , monad-control            >= 1.0      && < 1.1
   , mtl                      >= 2.2      && < 2.3
   , resourcet                >= 1.1      && < 1.3
   , store                    >= 0.2      && < 0.5
   , time                     >= 1.6      && < 1.9
   , transformers-base        >= 0.4      && < 0.5
   , unordered-containers     >= 0.2      && < 0.3

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances

executable gore-and-ash-sync-example01
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example01.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-network  >= 2.0      && < 2.1
    , gore-and-ash-sync
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-sync-example02
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example02.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-network  >= 2.0      && < 2.1
    , gore-and-ash-sync
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-sync-example03
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example03.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-network  >= 2.0      && < 2.1
    , gore-and-ash-sync
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-sync-example04
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example04.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-network  >= 2.0      && < 2.1
    , gore-and-ash-sync
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-sync-example05
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example05.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-network  >= 2.0      && < 2.1
    , gore-and-ash-sync
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-sync-example06
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example06.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-network  >= 2.0      && < 2.1
    , gore-and-ash-sync
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded
